[package]
name = "trait_associated_generic"
version = "0.1.0"
authors = ["Daogang Tang <daogangtang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "test0"
path = "src/test0.rs"

[[bin]]
name = "test1"
path = "src/test1.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"

[[bin]]
name = "test3"
path = "src/test3.rs"

[[bin]]
name = "test4"
path = "src/test4.rs"

[[bin]]
name = "test5"
path = "src/test5.rs"
